# mindspore-lite

./: .gitmodules  CONTRIBUTING.md  CONTRIBUTING_CN.md  NOTICE  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.bat  build.sh
mindspore-lite/src/extendrt/: CMakeLists.txt  delegate_graph_executor.cc  delegate_graph_executor.h  infer_session.cc  infer_session.h  subgraph_kernel.cc  subgraph_kernel.h
mindspore-lite/src/extendrt/convert/: CMakeLists.txt
mindspore-lite/src/extendrt/cxx_api/: CMakeLists.txt  context.cc  dlutils.h  serialization.cc
mindspore-lite/src/extendrt/cxx_api/graph/: graph.cc  graph_data.cc  graph_data.h
mindspore-lite/src/extendrt/cxx_api/llm_engine/: llm_engine.cc  llm_engine_impl.cc  llm_engine_plugin.cc
mindspore-lite/src/extendrt/cxx_api/model/: model.cc  model_impl.cc  model_impl.h
mindspore-lite/src/extendrt/cxx_api/model_pool/: model_parallel_runner_impl.cc  model_pool.cc  model_worker.cc  resource_manager.cc
mindspore-lite/src/extendrt/delegate/: comm_group_info.cc  comm_group_info.h  factory.cc  factory.h
mindspore-lite/src/extendrt/delegate/ascend_acl/: CMakeLists.txt  acl_allocator.cc  acl_allocator.h  acl_env_guard.cc  acl_env_guard.h  acl_graph_executor.cc  acl_graph_executor.h  acl_mem_manager.cc  acl_mem_manager.h  acl_model_options.h  acl_plugin_impl.cc  acl_plugin_impl.h  ascend_allocator_plugin.cc  ascend_allocator_plugin.h  dyn_shape_process.cc  dyn_shape_process.h  model_infer.cc  model_infer.h  model_process.cc  model_process.h  profiling.cc  profiling.h
mindspore-lite/src/extendrt/delegate/ascend_ge/: CMakeLists.txt  aoe_api_tune_process.cc  ge_device_context.cc  ge_dynamic_utils.h  ge_graph_executor.cc  ge_graph_executor.h  ge_plugin_impl.h
mindspore-lite/src/extendrt/delegate/ascend_native/: ascend_native_plugin_impl.h  delegate.cc  sub_graph_helper.cc
mindspore-lite/src/extendrt/delegate/ops/: copy.cc
mindspore-lite/src/extendrt/delegate/plugin/: ascend_acl_executor_plugin.cc  ascend_acl_executor_plugin.h  ascend_ge_executor_plugin.cc  ascend_ge_executor_plugin.h  ascend_native_executor_plugin.cc  ascend_native_executor_plugin.h  litert_executor_plugin.cc  litert_executor_plugin.h  tensorrt_executor_plugin.cc  tensorrt_executor_plugin.h
mindspore-lite/src/extendrt/delegate/tensorrt/: CMakeLists.txt  tensorrt_plugin_impl.h  tensorrt_subgraph.cc
mindspore-lite/src/extendrt/graph_compiler/: anfnode_tensor_adapter.cc  compile_result.cc  compile_result_builder.cc  default_graph_compiler.cc  infershape_helper.cc
mindspore-lite/src/extendrt/kernel/acl/: acl_kernel_lib.cc  custom_acl.cc
mindspore-lite/src/extendrt/kernel/ascend/: CMakeLists.txt
mindspore-lite/src/extendrt/kernel/cpu/: less_test_kernel_mod.cc  transpose_kernel_mod.cc
mindspore-lite/src/extendrt/kernel/default/: cnode_infer_manager.cc  kernel_mod_kernel.cc
mindspore-lite/src/extendrt/mindir_loader/mindir_model/: mindir_model_loader.cc  mindir_model_util.cc
mindspore-lite/src/extendrt/mock/: segment_runner.cc
mindspore-lite/src/extendrt/session/: delegate_session.cc  delegate_session.h  lite_graph_executor.h  memory_offload_session.cc  single_op_session.cc
mindspore-lite/src/extendrt/utils/: func_graph_utils.cc  func_graph_utils.h  kernel_build_utils.cc  runtime_utils.cc  segment_utils.cc  serialization.cc  tensor_default_impl.h  tensor_utils.cc  tensor_utils.h
mindspore-lite/src/litert/delegate/coreml/: CMakeLists.txt  coreml_executor.h  coreml_executor.mm  coreml_executor_wrapper.mm  coreml_graph.cc
mindspore-lite/tools/converter/: CMakeLists.txt  anf_transform.cc  anf_transform_for_ge.cc  converter.cc  converter_funcgraph.cc  converter_metagraph.cc  converter_packed_node.cc  export_model.cc  offline_packing_optimizer.cc  optimizer_manager.cc
mindspore-lite/tools/converter/adapter/: utils.cc  utils.h
mindspore-lite/tools/converter/adapter/acl/: CMakeLists.txt  OWNERS  acl_pass.cc
mindspore-lite/tools/converter/adapter/dpico/: CMakeLists.txt
mindspore-lite/tools/converter/config_parser/: CMakeLists.txt  acl_option_param_parser.cc  config_file_parser.cc  micro_param_parser.cc  preprocess_parser.cc  quant_param_parser.cc
mindspore-lite/tools/converter/converter_lite/: CMakeLists.txt  main.cc
mindspore-lite/tools/converter/cxx_api/: converter.cc
mindspore-lite/tools/converter/decomposer/: CMakeLists.txt
mindspore-lite/tools/converter/import/: cast_op_adjust.cc  mindir_adjust.cc  mindir_control_flow_adjust.cc  mindspore_importer.cc  primitive_adjust.cc  remove_public_primitive.cc
mindspore-lite/tools/converter/legacy_optimizer/fusion/: CMakeLists.txt  fusion_pass.cc  fusion_pattern.h
mindspore-lite/tools/converter/legacy_optimizer/graph/: CMakeLists.txt  const_node_reorder_pass.h  dtype_trans_pass.h  infershape_pass.cc  topological_sort_pass.h
mindspore-lite/tools/converter/micro/: OWNERS
mindspore-lite/tools/converter/micro/coder/: CMakeLists.txt  graph.cc  log.h
mindspore-lite/tools/converter/ops/: while.cc
mindspore-lite/tools/converter/parser/: conv1d_inout_adjust.cc  conv2d_transpose_input_adjust.cc  einsum_adjust.cc  inputs_adjust.cc  lstm_adjust_pass.cc  parser_utils.cc  tf_bidirection_gru_cf_fusion.cc  unify_format.cc  unused_node_remove_pass.h
mindspore-lite/tools/converter/parser/caffe/: CMakeLists.txt  caffe_activation_parser.cc  caffe_argmax_parser.cc  caffe_batchnorm_parser.cc  caffe_concat_parser.cc  caffe_conv_base_parser.cc  (+23 more)
mindspore-lite/tools/converter/preprocess/: CMakeLists.txt
mindspore-lite/tools/converter/quantizer/: CMakeLists.txt  cle_pattern.cc  debug_info_manager.h  fse_decoder.cc  fse_encoder.cc  full_quant_quantizer.cc  gptq.cc  gptq.h  gptq_quantizer.h  huffman_encode.h  insert_quant_node_manager.cc  quant_param_holder.h  quant_strategy.cc  quantize_util.cc  smooth_quant.cc  split_shared_bias.cc
mindspore-lite/tools/converter/registry/: CMakeLists.txt  model_parser_registry.cc  pass_registry.cc
mindspore-lite/tools/lite_exporter/: CMakeLists.txt  anf_exporter.cc  fetch_content.cc  fetch_content.h
(+4361 files in other folders)
